install bling.js to try to fix missing jQuery requirement

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
       <script src="node_modules/angular/angular.js"></script>
       <script src="node_modules/angular-route/angular-route.js"></script>
+      <!-- <script src="bling.js"></script> -->
       <script src="node_modules/ng-grid/ng-grid-2.0.1.debug.js"></script>
       <script src="scripts.js"></script>
 
