--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
       <link rel="stylesheet" href="node_modules/ng-grid/ng-grid.css" />
 
+
       <script src="node_modules/angular/angular.js"></script>
       <script src="node_modules/angular-route/angular-route.js"></script>
-      <!-- <script src="bling.js"></script> -->
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
       <script src="node_modules/ng-grid/ng-grid-2.0.1.debug.js"></script>
+
       <script src="scripts.js"></script>
 
     </head>
