inline css (ugh) to fix issue with table height since flexible height plugin doesn’t seem to wrk

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <script src="node_modules/angular/angular.js"></script>
       <script src="node_modules/angular-route/angular-route.js"></script>
       <script src="node_modules/ng-grid/ng-grid-2.0.1.debug.js"></script>
+      <script src="node_modules/ng-grid/plugins/ng-grid-flexible-height.js"></script>
 
       <script src="scripts.js"></script>
 
@@ -35,7 +36,7 @@
         <!-- MAIN CONTENT AND INJECTED VIEWS -->
         <div id="main">
 
-            <!-- this is where content for home and edit will be injected -->
+            <!-- this is where content from views will be injected -->
             <div ng-view></div>
 
         </div>
