add restangular to the project

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       <script src="node_modules/angular-route/angular-route.js"></script>
       <script src="node_modules/ng-grid/ng-grid-2.0.1.debug.js"></script>
       <script src="node_modules/ng-grid/plugins/ng-grid-flexible-height.js"></script>
+      <script src="node_modules/lodash/lodash.min.js"></script>
+      <script src="node_modules/restangular/dist/restangular.min.js"></script>
 
       <script src="scripts.js"></script>
 
