--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <script src="scripts.js"></script>
 
     </head>
-    <body ng-controller="mainController">
+    <body ng-controller="toolController">
 
         <!-- HEADER AND NAVBAR -->
         <header>
