--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
-                    <li><a href="#edit"><i class="fa fa-edit"></i> Edit</a></li>
+                    <li><a href="#new"><i class="fa fa-plus"></i> New Tool</a></li>
                 </ul>
             </div>
             </nav>
