--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
       <link rel="stylesheet" href="node_modules/ng-grid/ng-grid.css" />
+      <link rel="stylesheet" href="main.css">
 
       <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
       <script src="node_modules/angular/angular.js"></script>
@@ -28,9 +29,9 @@
                     <a class="navbar-brand" href="/">Post Interview Challenge</a>
                 </div>
 
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
-                    <li><a href="#new"><i class="fa fa-plus"></i> New Tool</a></li>
+                <ul class="nav justify-content-end">
+                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-home"></i> Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#new"><i class="fa fa-plus"></i> New Tool</a></li>
                 </ul>
             </div>
             </nav>
