--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" href="node_modules/ng-grid/ng-grid.css" />
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="app/app.css">
+    <link rel="stylesheet" href="app/home/home.css">
+    <link rel="stylesheet" href="app/edit/edit.css">
+
 </head>
 <body ng-app="challengeApp" ng-controller="ToolCtrl">
 
@@ -42,6 +45,9 @@
     <script src="node_modules/ng-grid/plugins/ng-grid-flexible-height.js"></script>
     <script src="node_modules/lodash/lodash.min.js"></script>
     <script src="node_modules/restangular/dist/restangular.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="app/app.js"></script>
+    <script src="app/home/home.js"></script>
+    <script src="app/edit/edit.js"></script>
+
 </body>
 </html>
