hack to fix ng-grid height
inline style required to fix ng-grid height. Tried using alternative methods including a height plugin, but none worked.

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -3,5 +3,5 @@
     <h1>10 Tools Everyone Should Own</h1>
     <p>via <a href="https://www.popularmechanics.com/home/tools/reviews/g1760/50-tools-everyone-should-own/?slide=1">Popular Mechanics</a></p>
   </div>
-  <div ng-grid="gridOptions" style="height:50vh"></div>
+    <div ng-grid="gridOptions" style="min-height:400px"></div>
 </div>
